--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-redis": "^3.0.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "mysql": "^2.10.2",
+    "sequelize": "^3.23.3",
     "serve-favicon": "~2.3.0"
   }
 }
