--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "mysql": "^2.10.2",
+    "password-hash": "^1.2.2",
     "sequelize": "^3.23.3",
     "serve-favicon": "~2.3.0"
   }
