--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
     "jquery": "^2.2.4",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-bootstrap": "^1.3.3"
   }
 }
