--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,6 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 /public/bower_components
-/public/uploads
+/public/uploads/*
 /tmp
-
+/bin/tmp
